# RVC_AI_VoiceChanger

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
config/: default.yaml  example_windows_3090.yaml  japanese_to_chinese_dialogue.yaml
data/dataset_manifests/: README.txt
data/mixed_speaker_audio/: README.txt
data/raw_archive/: README.txt
data/speaker_manifests/: README.txt
data/speaker_segments/: README.txt
data/speaker_selected_audio/: README.txt
data/test_audio/: README.txt  test_manifest.example.yaml
data/training_audio/: README.txt
data/training_candidates/: README.txt
data/voice_references/: README.txt
docs/: DATA_WORKFLOW_ZH.md  SPEAKER_SORTING_ZH.md
scripts/: build_rvc_index.py  doctor.bat  resume.bat  run_all.bat  setup_speaker_venv.bat  setup_venv.bat  validate_rvc_model.py
src/rvc_auto_trainer/: __init__.py  __main__.py  cli.py  config.py  dataset.py  environment.py  evaluation_dataset.py  exceptions.py  hashing.py  logging_utils.py  speaker_sorting.py  state.py
src/rvc_auto_trainer/audio/: __init__.py  decoder.py  discovery.py  normalization.py  quality.py  reports.py  slicer.py
src/rvc_auto_trainer/monitoring/: __init__.py  gpu_monitor.py  process_monitor.py
src/rvc_auto_trainer/pipeline/: __init__.py  default_handlers.py  (+3 more)
tests/: test_audio_discovery.py  test_audio_processing.py  test_audio_quality.py  test_cli.py  test_config.py  test_dataset_workflow.py  test_environment.py  test_hashing.py  test_pipeline.py  test_rvc_adapter.py  test_rvc_official_compat.py  test_rvc_training_workspace.py  test_state.py
(+12 files in other folders)
