[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvc-auto-trainer"
version = "0.1.0"
description = "Windows-first automation, quality auditing, training, and evaluation for RVC"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Keropoi" }]
dependencies = [
  "Jinja2>=3.1,<4",
  "PyYAML>=6.0,<7",
  "librosa>=0.10.2,<0.11",
  "numpy>=1.24,<2.1",
  "nvidia-ml-py>=12.535,<13",
  "pandas>=2.0,<3",
  "psutil>=5.9,<7",
  "pydantic>=2.7,<3",
  "pyloudnorm>=0.1.1,<0.2",
  "rich>=13.7,<14",
  "scipy>=1.10,<1.14",
  "soundfile>=0.12,<0.14",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
rvc-auto-trainer = "rvc_auto_trainer.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rvc_auto_trainer = ["reporting/templates/*.jinja2"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
